# resuman

./: .ignore  Cargo.toml  CommandLineHelp.md  README.md  resuman.toml  test.sqlite
.sqlx/: query-02efc1329babd979848461aa736a7c5067885c272995f5e8236ba4814870cd2e.json  query-05ecde6960ce5ef0733c980e49b3a4ad5bb6229bd7d19a3cdd849a6c9e3c67d3.json  query-06d42d45df9550d70c1a751865d229c58f531f9fbd7dc127ba414a8ff9a3b440.json  query-13108eb59f67f194f9433d4e170bce4bb8f91c0f4651ae4d2289f63ca1c7edc1.json  query-50cf42d4463c939fefcbffa75b7abe279b77c47a712de362a3d233389dadb664.json  query-5f22fbfab5886b34b9fdb8430a80f7f2c3cd5be8687e68c55c99408ef7efbf6d.json  query-920a4492767b5f211f533f4bad072efbd7b1295f15f1a85077eec3c9b7b7dbd2.json  query-9b3913d3685e7b9ed3e525e979dba68bdf50dcdfd7cd7ce14be6f91141d296b2.json  query-9e606e1647adb0f5b40bb687b43f87e139fbce618984b98cd10446328c1d5a21.json  query-b9b5ed8748997cbe7eeaf32a51d8be3623016299987d668d0f00a5eba5ec4afd.json  query-f5286e0aed1556a5a3922f18e61a2423596376f093f11aa5dfef877e4e8ca6bb.json  query-fbbe52b4bb7e9b8ac6ea072771eb0cec23dbc704a58eea9347586fbdf5488973.json  query-fea420a7185d47a33abd5dc87605daff18b1faace949733b7a855dc4c0b896a5.json
migrations/: 20241227203415_resume.down.sql  20241227203415_resume.up.sql
src/: config.rs  error.rs  main.rs  resume.rs  utils.rs
src/commands/: create.rs  delete.rs  find.rs  list.rs  mod.rs  update.rs
