[package]
name = "resuman"
version = "0.1.0"
edition = "2021"
authors = ["William Zeng <w39zeng@uwaterloo.ca>"]
description = "A command-line tool to manage your resume."

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls", "chrono"] }
futures = "0.3"
tokio = { version = "1.20", features = ["rt", "macros"]}
time = "0.3"
chrono = "0.4"
walkdir = "2"
clap-markdown = "0.1"
